--- a/index.html
+++ b/index.html
@@ -132,10 +132,11 @@
         <div class="col l3 s12">
           <h5 class="white-text">Contact</h5>
           <ul>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
+            <li>brian.dewinne@student.hogent.be</li>
+            <li>brecht.vandenhouwe@student.hogent.be</li>
+            <li>denys.slyvka@student.odisee.be</li>
+            <li>rayen.nasra@student.hogent.be</li>
+            <li>werner.deschryver@student.hogent.be</li>
           </ul>
         </div>
       </div>
