--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <nav class="light-blue lighten-1" style="position:fixed;z-index: 99;"role="navigation">
     <div class="nav-wrapper container" ><a id="logo-container" href="#" class="brand-logo">Skudrum</a>
       <ul class="right hide-on-med-and-down">
-        <li><a href="#">Aanmelden</a></li>
+        <li><a href="aanmelden.html">Aanmelden</a></li>
         <li>
           <form>
             <div class="input-field">
